[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[net]
git-fetch-with-cli = true

[source.crates-io]
registry = "git://github.com/rust-lang/crates.io-index.git"

[dependencies]
regex = "1.3.6"
